--- a/Ecommerce/pom.xml
+++ b/Ecommerce/pom.xml
@@ -10,8 +10,8 @@
 
   <developers>
     <developer>
-      <name>me</name>
-      <email>me@my.me</email>
+      <name>Nilesh</name>
+      <email>nileshnath1706@gmail.com</email>
     </developer>
   </developers>
 
@@ -24,24 +24,14 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>net.anthavio</groupId>
-      <artifactId>phanbedder-1.9.8</artifactId>
-      <version>1.0.0</version>
-      <scope>test</scope>
-    </dependency>
+    
 
-    <dependency>
-      <groupId>com.github.detro</groupId>
-      <artifactId>phantomjsdriver</artifactId>
-      <version>1.2.0</version>
-      <scope>test</scope>
-    </dependency>
+    
 
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>2.45.0</version>
+      <version>LATEST</version>
       <scope>test</scope>
     </dependency>
 
@@ -52,12 +42,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <dependency>
-      <groupId>com.github.jsdevel</groupId>
-      <artifactId>testng-selenium</artifactId>
-      <version>0.10.0</version>
-      <scope>test</scope>
-    </dependency>
+    
   </dependencies>
 
   <build>
