--- a/Ecommerce/pom.xml
+++ b/Ecommerce/pom.xml
@@ -24,12 +24,11 @@
   </properties>
 
   <dependencies>
-         <!--other dependencies -->
       <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>4.9.0</version>
+    <version>4.20.0</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
@@ -39,39 +38,57 @@
     <scope>test</scope>
 </dependency>
 
+<!-- WebdriverManager -->
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
     <version>5.9.1</version>
     <scope>test</scope>
 </dependency>
-<dependency>
-    <groupId>tech.grasshopper</groupId>
-    <artifactId>extent-pdf-report</artifactId>
-    <version>2.12.0</version>
-</dependency>
+
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
     <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
     <version>5.1.2</version>
 </dependency>
-
-<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+    
+  <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 <dependency>
-    <groupId>com.aventstack</groupId>
-    <artifactId>extentreports</artifactId>
-    <version>5.0.9</version>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>5.3.0</version>
 </dependency>
 
-    <!--other dependencies -->
-    
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.3.0</version>
+</dependency>
 
-    
+<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.24.1</version>
+</dependency>
 
-    
+<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.24.1</version>
+</dependency>
 
-    
+<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-slf4j-impl</artifactId>
+    <version>2.24.1</version>
+    <scope>test</scope>
+</dependency>
+
   </dependencies>
 
   <build>
